update financebench_id_03029 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -6,7 +6,9 @@ financebench_id_03029:
   answer: $1577.00
 
   category: 0-RETRIEVE
-  correctness-eval: the answer contains a quantity equivalent to 1577, 1577 million or 1.577 billion
+  correctness: >-
+    the answer contains a quantity equivalent to or approximately equal to
+    1577, 1577 million or 1.577 billion
 
 financebench_id_04672:
   doc_name: 3M_2018_10K
