--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -193,6 +193,12 @@ financebench_id_04735:
     current liabilities. Round your answer to two decimal places.'
   answer: '0.66'
   page(s): 59,63
+
+  category: 3-CALC-COMPLEX
+  correctness: >-
+    the answer contains a calculated Operating Cash Flow Ratio metric value that is between 0.6 and 0.7
+
+
 financebench_id_07507:
   doc: ADOBE_2016_10K
   question: What is Adobe's year-over-year change in unadjusted operating income from
