--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -206,6 +206,12 @@ financebench_id_07507:
     solution to the question by using the income statement.
   answer: 65.4%
   page(s): '62'
+
+  category: 2-CALC-CHANGE
+  correctness: >-
+    the answer contains a calculated Operating Income change percentage that is approximately 65% or 65.4%
+
+
 financebench_id_03856:
   doc: ADOBE_2017_10K
   question: 'What is the FY2017 operating cash flow ratio for Adobe? Operating cash
