--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -261,6 +261,12 @@ financebench_id_01319:
     then state 0.
   answer: '0'
   page(s): '132'
+
+  category: 0-RETRIEVE
+  correctness: >-
+    the answer states 0, zero, and/or that restructuring costs are not explicitly found
+
+
 financebench_id_00540:
   doc: AES_2022_10K
   question: Roughly how many times has AES Corporation sold its inventory in FY2022?
