update financebench_id_08286 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -332,6 +332,16 @@ financebench_id_08286:
     USD millions)?
   answer: $11588.00
   page(s): '38'
+
+  category: 0-RETRIEVE
+  correctness: >-
+    the answer contains a quantity equivalent to or approximately equal to
+    11588, 11588 million, 11.588 billion,
+    11500, 11500 million, 11.5 billion,
+    11600, 11600 million, 11.6 billion,
+    12000, 12000 million or 12 billion
+
+
 financebench_id_03882:
   doc: AMCOR_2020_10K
   question: What is Amcor's year end FY2020 net AR (in USD millions)? Address the
