update financebench_id_03882 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -349,6 +349,14 @@ financebench_id_03882:
     details shown within the balance sheet.
   answer: $1616.00
   page(s): '50'
+
+  category: 0-RETRIEVE
+  correctness: >-
+    the answer contains a quantity equivalent to or approximately equal to
+    1616, 1616 million, 1.616 billion,
+    1600, 1600 million or 1.6 billion
+
+
 financebench_id_01935:
   doc: AMCOR_2022_8K_dated-2022-07-01
   question: What was the key agenda of the AMCOR's 8k filing dated 1st July 2022?
