--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -404,6 +404,15 @@ financebench_id_01079:
 
     packaging machines.'
   page(s): '64'
+
+  category: 0-RETRIEVE
+  correctness: |-
+    the answer mentions acquisitions in at least 2 of the following:
+    - Czech Republic
+    - New Zealand, and
+    - Shanghai, China (or alternatively just "Shanghai" or just "China")
+
+
 financebench_id_01148:
   doc: AMCOR_2023_10K
   question: What industry does AMCOR primarily operate in?
