--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -487,6 +487,13 @@ financebench_id_03069:
     (D&A from cash flow statement) % margin for AMD?
   answer: 4.2%
   page(s): 56,60
+
+  category: 3-CALC-COMPLEX
+  correctness: >-
+    the answer contains a calculated Depreciation & Amortization (D&A) Margin percentage value,
+    (using Net Revenue as denominator) that is approximately 4% or 4.2%
+
+
 financebench_id_00222:
   doc: AMD_2022_10K
   question: Does AMD have a reasonably healthy liquidity profile based on its quick
