--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -519,6 +519,12 @@ financebench_id_00995:
     computers; discrete GPUs, and semi-custom SoC products and development services;
     and embedded CPUs, GPUs, APUs, FPGAs, and Adaptive SoC products.
   page(s): '4'
+
+  category: 0-RETRIEVE
+  correctness: >-
+    the answer mentions at least CPUs, GPUs and FPGAs
+
+
 financebench_id_01198:
   doc: AMD_2022_10K
   question: What drove revenue change as of the FY22 for AMD?
