--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -637,6 +637,12 @@ financebench_id_00720:
     that and explain why.
   answer: Performance is not measured through gross margin
   page(s): '96'
+  
+  category: 6-OTHER-ADVANCED
+  correctness: >-
+    the answer says that Gross Margin is not a very relevant/useful metric for American Express's business model
+
+
 financebench_id_01351:
   doc: AMERICANEXPRESS_2022_10K
   question: How much has the effective tax rate of American Express changed between
