update financebench_id_01981 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -676,7 +676,7 @@ financebench_id_01981:
 
   category: 0-RETRIEVE
   correctness: >-
-    the answer is affirmative
+    the answer is affirmative. i.e., American Express's cardmember retention was good
 
 
 financebench_id_05718:
