--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -720,7 +720,7 @@ financebench_id_00070:
 
   category: 3-CALC-COMPLEX
   correctness: >-
-    the answer is affirmative
+    the answer is affirmative, i.e., American Water Works had positive working capital
 
 
 financebench_id_02608:
